--- a/backend/.rubocop.yml
+++ b/backend/.rubocop.yml
@@ -1,5 +1,3 @@
-inherit_from: .rubocop_todo.yml
-
 require:
   - rubocop-rails
 
@@ -8,3 +6,5 @@ AllCops:
     - 'bin/**/*'
     - 'config/**/*'
     - 'db/**/*'
+Style/Documentation:
+  Enabled: false
