--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -1,13 +1,13 @@
-source "https://rubygems.org"
+source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby "3.2.2"
+ruby '3.2.2'
 
-gem "rails"
-gem "pg"
-gem "puma"
-gem "bootsnap", require: false
+gem 'bootsnap', require: false
+gem 'pg'
+gem 'puma'
 gem 'rack-cors'
+gem 'rails'
 
 group 'development' do
   gem 'rubocop', require: false
