--- a/backend/.rubocop.yml
+++ b/backend/.rubocop.yml
@@ -6,5 +6,11 @@ AllCops:
     - 'bin/**/*'
     - 'config/**/*'
     - 'db/**/*'
+    - 'Rakefile'
+    - 'config.ru'
 Style/Documentation:
   Enabled: false
+
+Style/FrozenStringLiteralComment:
+  Exclude:
+    - 'Gemfile'
