--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
       - name: Build docker image
         run: docker-compose -f backend/docker-compose.yml build
       - name: Prepare db container
@@ -21,6 +23,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
       - name: Build docker image
         run: docker-compose -f backend/docker-compose.yml build
       - name: Run rubocop
