--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,3 +29,11 @@ jobs:
         run: docker-compose -f backend/docker-compose.yml build
       - name: Run rubocop
         run: docker-compose -f backend/docker-compose.yml run --rm web bundle exec rubocop
+  check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check
+        run: |
+          echo ${{ github.head_ref }}
+          echo ${{ github.ref }}
+          echo ${{ github.sha }}
