--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,3 +37,5 @@ jobs:
           echo ${{ github.head_ref }}
           echo ${{ github.ref }}
           echo ${{ github.sha }}
+          echo ${{ github.workflow_sha }}
+          echo ${{ github.event.pull_request.head.sha }}
