--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - master
 env:
-  DOCKER_COMPOSE_PATH: backend/docker-compose.yml
+  DOCKER_COMPOSE_PATH: docker-compose.yml
 
 jobs:
   test:
