shell: bashを指定する

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
       - name: Setup
+        shell: bash
         run: make setup
       - name: Lint
+        shell: bash
         run: make lint
