--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,3 +19,8 @@ Style/Documentation:
   Enabled: false
 RSpec/ContextWording:
   Enabled: false
+RSpec/MultipleExpectations:
+  Enabled: true
+  Max: 3
+RSpec/IndexedLet:
+  Enabled: false
