--- a/.github/workflows/test_lint.yml
+++ b/.github/workflows/test_lint.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: code-coverage-report
-          path: coverage/index.html
+          path: coverage/**/*
   lint:
     runs-on: ubuntu-latest
     steps:
