--- a/.github/workflows/test_lint.yml
+++ b/.github/workflows/test_lint.yml
@@ -9,9 +9,9 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
       - name: Setup
-        run: make setup
+        run: ./scripts/setup.sh
       - name: Test
-        run: make test
+        run: ./scripts/test.sh
       - name: Archive code coverage results
         uses: actions/upload-artifact@v4
         with:
@@ -25,6 +25,6 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
       - name: Setup
-        run: make setup
+        run: ./scripts/setup.sh
       - name: Lint
-        run: make lint
+        run: ./scripts/lint.sh
